fix border on mobile resolutions

--- a/src/Components/Articles/Articles.scss
+++ b/src/Components/Articles/Articles.scss
@@ -38,7 +38,7 @@
                 width: 45%;
             }
             @media only screen and(max-width: 500px) {
-                width: 100%;
+                width: 90%;
                 .cardInner {
                     background-color: rgba(0,0,0,0.4);
 
